--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@gravity-ui/uikit": "^7.29.0",
     "better-sqlite3": "^12.5.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "electron-updater": "^6.3.9",
+    "firebase": "^12.7.0",
     "i18next": "^25.7.3",
+    "pg": "^8.16.3",
     "react-big-calendar": "^1.19.4",
     "react-i18next": "^16.5.1",
     "uuid": "^13.0.0",
@@ -43,6 +46,7 @@
     "@electron-toolkit/tsconfig": "^2.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.19.1",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19.2.7",
     "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.2.3",
